fix gaps between columns update panels order adjust upload label sort fonts
Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/716456
Commit-Queue: Kevin Lubick <kjlubick@google.com>

--- a/skottie/modules/skottie-file-form-sk/skottie-file-form-sk.scss
+++ b/skottie/modules/skottie-file-form-sk/skottie-file-form-sk.scss
@@ -20,6 +20,8 @@ skottie-file-form-sk {
       cursor: pointer;
       display: block;
       margin: 8px 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     &--input {
       display: none;
