--- a/skottie/modules/skottie-sk/skottie-sk.scss
+++ b/skottie/modules/skottie-sk/skottie-sk.scss
@@ -86,6 +86,8 @@ body.body-sk.font-sk {
     main .threecol {
       display: flex;
       flex-flow: row;
+      gap: 16px;
+      margin-top: 16px;
       background-color: var(--surface);
       width: 100%;
 
@@ -121,14 +123,14 @@ body.body-sk.font-sk {
 
           .edit-config {
             display: inline-block;
-            background-color: var(--surface);
             color: var(--on-surface);
-            border: solid 2px var(--primary);
             padding: 6px;
             border-radius: 10px;
             margin-left: 16px;
             box-shadow: none;
             flex: 1 1 auto;
+            word-wrap: break-word;
+            min-width: 0;
           }
         }
 
@@ -155,11 +157,11 @@ body.body-sk.font-sk {
       }
 
       .left {
-        margin: 16px 0 0 16px;
+        margin: 0 0 0 16px;
       }
 
       .right {
-        margin: 16px 16px 0 0;
+        margin: 0 16px 0 0;
       }
 
       .main {
